refactored the code

--- a/Backend/.env
+++ b/Backend/.env
@@ -8,5 +8,7 @@ BEDROCK_DATA_SOURCE_ID=ZA6OYIU760
 BEDROCK_MODEL=amazon.nova-pro-v1:0
 BEDROCK_EMBEDDING_MODEL=amazon.titan-embed-text-v2:0
 
-
+# Execution
+# --------------------
+EXECUTION_MODE=local
 
