--- a/Backend/.env
+++ b/Backend/.env
@@ -10,5 +10,10 @@ BEDROCK_EMBEDDING_MODEL=amazon.titan-embed-text-v2:0
 
 # Execution
 # --------------------
-EXECUTION_MODE=local
+EXECUTION_MODE=emr
+
+EMR_APPLICATION_ID=00g36tad05873809
+EMR_EXECUTION_ROLE_ARN=arn:aws:iam::339713066436:role/EMRServerlessJobRole-INAAS
+EMR_JOB_ENTRY_S3=s3://inaas-raw-analytics-dev/emr/emr_job_entry.py
+EMR_LOG_S3_URI=s3://inaas-raw-analytics-dev/emr/logs/
 
