--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
+# Execution
+EXECUTION_MODE=databricks
 
-# AWS
 AWS_REGION=us-east-1
 S3_RAW_BUCKET=inaas-raw-data
 S3_BUCKET=inaas-raw-analytics-dev
@@ -8,5 +9,18 @@ BEDROCK_DATA_SOURCE_ID=ZA6OYIU760
 BEDROCK_MODEL=amazon.nova-pro-v1:0
 BEDROCK_EMBEDDING_MODEL=amazon.titan-embed-text-v2:0
 
+# EMR Serverless
+EMR_APPLICATION_ID=00g36tad05873809
+EMR_EXECUTION_ROLE_ARN=arn:aws:iam::339713066436:role/EMRServerlessJobRole-INAAS
+EMR_RUN_QUERY_SCRIPT=s3://inaas-raw-data/jobs/run_query.py
+EMR_SCHEMA_EXTRACTOR_SCRIPT=s3://inaas-raw-data/jobs/schema_extractor.py
 
+# Databricks (optional for future)
+DATABRICKS_HOST=dbc-cc42a4bb-5f6c.cloud.databricks.com
+DATABRICKS_HTTP_PATH=/sql/1.0/warehouses/576ee6e2efcf205d
+DATABRICKS_TOKEN=dapief3aa8e4927d512c24466148c18e773d
+DATABRICKS_SCHEMA_EXTRACTOR_SCRIPT=dbfs:/inaas/jobs/schema_extractor.py
+DATABRICKS_RUN_QUERY_SCRIPT=dbfs:/inaas/jobs/run_query.py
+
+DATABRICKS_CLUSTER_ID=0209-111720-ow93dmvl
 
