--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -12,3 +12,8 @@ pyspark==3.5.0
 
 # ---------------- Utilities ----------------
 typing-extensions>=4.9.0
+
+
+
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
