--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -7,13 +7,16 @@ pydantic-settings>=2.1.0
 boto3>=1.34.0
 botocore>=1.34.0
 
-# ---------------- Spark (LOCAL) ----------------
+# ---------------- Spark ----------------
 pyspark==3.5.0
+
+# ---------------- Databricks ----------------
+databricks-sql-connector>=3.0.0
+
+# ---------------- API ----------------
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+gunicorn>=21.2.0
 
 # ---------------- Utilities ----------------
 typing-extensions>=4.9.0
-
-
-
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
