--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -25,4 +25,8 @@ COPY . .
 
 EXPOSE 8080
 
-CMD ["python", "main.py", "--mode", "api"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
