--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -29,4 +29,4 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "api.fast_api:app", "--host", "0.0.0.0", "--port", "8080"]
